--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
   "name": "bodmas-formula-engine",
   "version": "1.0.0",
-  "description": "A mathematical expression evaluation engine built with React 18, featuring BODMAS order of operations, drag-and-drop interface, and Monaco editor integration",
+  "description": "A powerful React component for building mathematical formulas with visual interface, real-time validation, and comprehensive function library",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist",
-    "README.md"
+    "README.md",
+    "CUSTOM_VARIABLES.md"
   ],
   "keywords": [
     "react",
-    "react18",
+    "formula-builder",
+    "mathematical-expressions",
+    "bodmas",
+    "monaco-editor",
+    "drag-and-drop",
     "material-ui",
     "mui",
-    "scss",
-    "functional-components",
+    "formula-engine",
+    "expression-evaluator",
     "npm-package"
   ],
   "author": "Sandeep Bhatkande",
@@ -23,38 +29,60 @@
     "type": "git",
     "url": "https://github.com/sandeepbhatkande/bodmas-formula-engine.git"
   },
+  "homepage": "https://github.com/sandeepbhatkande/bodmas-formula-engine#readme",
+  "bugs": {
+    "url": "https://github.com/sandeepbhatkande/bodmas-formula-engine/issues"
+  },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
     "@monaco-editor/react": "^4.6.0",
-    "@mui/icons-material": "^7.1.2",
-    "@mui/lab": "^7.0.0-beta.14",
-    "@mui/material": "^7.1.2",
     "mathjs": "^12.4.0",
-    "react": ">=18.0.0",
-    "react-dnd": "^16.0.1",
-    "react-dom": ">=18.0.0"
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react-scripts": "5.0.1",
-    "sass": "^1.89.2",
-    "web-vitals": "^2.1.4"
+    "react-dnd": "^16.0.1"
   },
   "peerDependencies": {
     "react": ">=18.0.0",
-    "react-dom": ">=18.0.0"
+    "react-dom": ">=18.0.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.2",
+    "@mui/lab": "^7.0.0-beta.14",
+    "@mui/material": "^7.1.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.24.0",
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-react": "^7.24.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.2",
+    "@mui/lab": "^7.0.0-beta.14",
+    "@mui/material": "^7.1.2",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "rollup": "^4.12.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "sass": "^1.89.2",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build:demo": "react-scripts build",
+    "build": "rollup -c",
+    "build:watch": "rollup -c -w",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:package": "npm run build",
-    "prepublishOnly": "npm run build:package"
+    "prepublishOnly": "npm run build",
+    "publish:npm": "npm publish"
   },
   "eslintConfig": {
     "extends": [
