--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "type": "git",
     "url": "https://github.com/sandeepbhatkande/bodmas-formula-engine.git"
   },
-  "homepage": "https://github.com/sandeepbhatkande/bodmas-formula-engine#readme",
+  "homepage": "https://sandeepbhatkande.github.io/bodmas-formula-engine",
   "bugs": {
     "url": "https://github.com/sandeepbhatkande/bodmas-formula-engine/issues"
   },
@@ -40,13 +40,13 @@
     "react-dnd": "^16.0.1"
   },
   "peerDependencies": {
-    "react": ">=18.0.0",
-    "react-dom": ">=18.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.2",
     "@mui/lab": "^7.0.0-beta.14",
-    "@mui/material": "^7.1.2"
+    "@mui/material": "^7.1.2",
+    "react": ">=18.0.0",
+    "react-dom": ">=18.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.0",
@@ -65,6 +65,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -82,7 +83,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prepublishOnly": "npm run build",
-    "publish:npm": "npm publish"
+    "publish:npm": "npm publish",
+    "deploy:demo": "npm run build:demo && gh-pages -d build",
+    "predeploy": "npm run build:demo"
   },
   "eslintConfig": {
     "extends": [
