--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "bodmas-formula-engine",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "A powerful React component for building mathematical formulas with visual interface, real-time validation, and comprehensive function library",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist",
+    "!dist/*.map",
     "README.md",
     "CUSTOM_VARIABLES.md"
   ],
